compute EIG of some simple designs

--- a/tutorial/source/elections.ipynb
+++ b/tutorial/source/elections.ipynb
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
     "        poll_results = pyro.sample(\"y\", dist.Binomial(polling_allocation, logits=theta).to_event(1))\n",
     "        dem_win_state = (theta > 0.).float()\n",
     "        dem_electoral_college_votes = ec_votes_tensor * dem_win_state\n",
-    "        dem_win = dem_electoral_college_votes.sum(-1) / ec_votes_tensor.sum(-1) > .5\n",
+    "        dem_win = (dem_electoral_college_votes.sum(-1) / ec_votes_tensor.sum(-1) > .5).float()\n",
     "        pyro.sample(\"w\", dist.Delta(dem_win))\n",
     "        return poll_results, dem_win, theta"
    ]
@@ -406,20 +406,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prior probability of Dem win 0.6632699966430664\n"
+      "Prior probability of Dem win 0.6625999808311462\n"
      ]
     }
    ],
    "source": [
     "_, dem_wins, theta = model(torch.ones(100000, 51))\n",
-    "print(\"Prior probability of Dem win\", dem_wins.float().mean().item())"
+    "prior_w_prob = dem_wins.float().mean()\n",
+    "print(\"Prior probability of Dem win\", prior_w_prob.item())"
    ]
   },
   {
@@ -698,18 +699,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-13-4fd0aa0c0002>, line 16)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-4fd0aa0c0002>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    def forward(self, )\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from torch import nn\n",
     "\n",
@@ -722,19 +714,172 @@
     "        self.lin3 = nn.Linear(256, 1)\n",
     "        \n",
     "    def compute_dem_probability(self, y):\n",
-    "        y = F.relu(self.lin1(y))\n",
-    "        y = F.relu(self.lin2(y))\n",
+    "        y = nn.functional.relu(self.lin1(y))\n",
+    "        y = nn.functional.relu(self.lin2(y))\n",
     "        return self.lin3(y)\n",
     "    \n",
-    "    def forward(self, )"
+    "    def forward(self, y_dict, design, observation_labels, target_labels):\n",
+    "\n",
+    "        pyro.module(\"posterior_guide\", self)\n",
+    "        \n",
+    "        y = y_dict[\"y\"]\n",
+    "        dem_prob = self.compute_dem_probability(y).squeeze()\n",
+    "        pyro.sample(\"w\", dist.Bernoulli(logits=dem_prob))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "poll_in_florida = torch.zeros(51)\n",
+    "poll_in_florida[9] = 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyro.contrib.oed.eig import posterior_eig\n",
+    "from pyro.optim import Adam\n",
+    "\n",
+    "pyro.clear_param_store()\n",
+    "guide = OutcomePredictor()\n",
+    "ape_florida = posterior_eig(model, poll_in_florida, \"y\", \"w\", 10, 4000, guide, \n",
+    "                            Adam({\"lr\": 0.001}), eig=False, final_num_samples=10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FL EIG 0.06539082527160645\n"
+     ]
+    }
+   ],
+   "source": [
+    "def h(p):\n",
+    "    return -p*p.log() - (1-p)*(1-p).log()\n",
+    "\n",
+    "prior_entropy = h(prior_w_prob)\n",
+    "eig_florida = prior_entropy - ape_florida\n",
+    "print(\"FL EIG\", eig_florida.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "poll_in_hawaii = torch.zeros(51)\n",
+    "poll_in_hawaii[11] = 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyro.clear_param_store()\n",
+    "ape_hawaii = posterior_eig(model, poll_in_hawaii, \"y\", \"w\", 10, 4000, guide, \n",
+    "                           Adam({\"lr\": 0.001}), eig=False, final_num_samples=10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HI EIG 0.038231611251831055\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"HI EIG\", (prior_entropy - ape_hawaii).item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Theoretical maximum EIG 0.6392958164215088\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Theoretical maximum EIG\", prior_entropy.item())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Already we have established that it's better to do all our polling in Florida than in Hawaii."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uniform_poll = 19 * torch.ones(51)\n",
+    "\n",
+    "pyro.clear_param_store()\n",
+    "ape_martin = posterior_eig(model, uniform_poll, \"y\", \"w\", 10, 4000, guide, \n",
+    "                           Adam({\"lr\": 0.001}), eig=False, final_num_samples=10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uniform EIG 0.3164719343185425\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Uniform EIG\", (prior_entropy - ape_martin).item())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is surprisingly high: we have almost halved our uncertainty by polling just 19 people per state. (19 = 1000 / 51)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Running the experiment\n",
+    "To run the experiment, we sample a polling outcome using the probabilities implied by the actual results from the 2016 election.\n"
+   ]
   }
  ],
  "metadata": {
