--- a/tutorial/source/elections.ipynb
+++ b/tutorial/source/elections.ipynb
@@ -350,9 +350,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 195,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([51, 20])\n"
+     ]
+    }
+   ],
    "source": [
     "idx = 2 * torch.arange(10)\n",
     "as_tensor = torch.tensor(frame.values, dtype=torch.float)\n",
@@ -362,7 +370,81 @@
     "    (logits.unsqueeze(-1) - mean) * (logits.unsqueeze(-2) - mean)\n",
     ").sum(0)\n",
     "prior_covariance = sample_covariance + 0.01 * torch.eye(sample_covariance.shape[0])\n",
-    "prior_scale_tril = prior_covariance.cholesky()"
+    "# prior_scale_tril = prior_covariance.cholesky()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17367 245800\n",
+      "       Max theta  Min theta\n",
+      "State                      \n",
+      "AL      0.572237   0.230799\n",
+      "AK      0.657566   0.224102\n",
+      "AZ      0.641266   0.278686\n",
+      "AR      0.577688   0.213240\n",
+      "CA      0.767273   0.444067\n",
+      "CO      0.662945   0.387844\n",
+      "CT      0.739860   0.416757\n",
+      "DE      0.737285   0.433654\n",
+      "DC      0.997991   0.239024\n",
+      "FL      0.653355   0.354701\n",
+      "GA      0.640571   0.290071\n",
+      "HI      0.879922   0.467035\n",
+      "ID      0.616502   0.137171\n",
+      "IL      0.728675   0.426816\n",
+      "IN      0.585696   0.317835\n",
+      "IA      0.625571   0.431376\n",
+      "KS      0.566469   0.236563\n",
+      "KY      0.538385   0.250825\n",
+      "LA      0.562343   0.277340\n",
+      "ME      0.721313   0.421423\n",
+      "MD      0.765678   0.477022\n",
+      "MA      0.791817   0.407336\n",
+      "MI      0.668811   0.421265\n",
+      "MN      0.642371   0.432976\n",
+      "MS      0.595787   0.298554\n",
+      "MO      0.560188   0.348557\n",
+      "MT      0.570501   0.299350\n",
+      "NE      0.616855   0.200732\n",
+      "NV      0.718238   0.340131\n",
+      "NH      0.721305   0.326513\n",
+      "NJ      0.733307   0.429321\n",
+      "NM      0.676778   0.422189\n",
+      "NY      0.802608   0.443794\n",
+      "NC      0.615568   0.365050\n",
+      "ND      0.589290   0.234731\n",
+      "OH      0.614335   0.414748\n",
+      "OK      0.566184   0.159479\n",
+      "OR      0.673490   0.445304\n",
+      "PA      0.615398   0.437506\n",
+      "RI      0.812404   0.422254\n",
+      "SC      0.613296   0.291635\n",
+      "SD      0.561052   0.270627\n",
+      "TN      0.539536   0.269196\n",
+      "TX      0.573470   0.280452\n",
+      "UT      0.582874   0.076412\n",
+      "VT      0.850001   0.449104\n",
+      "VA      0.646078   0.390700\n",
+      "WA      0.702046   0.439795\n",
+      "WV      0.521445   0.229994\n",
+      "WI      0.625327   0.442642\n",
+      "WY      0.573455   0.108868\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(frame.values[8,16], frame.values[8,17])\n",
+    "theoretical = pd.DataFrame({\"State\": frame.index, \n",
+    "                            \"Min theta\": torch.sigmoid(prior_mean - 2* std), \n",
+    "                            \"Max theta\": torch.sigmoid(prior_mean + 2 * std)}).set_index(\"State\")\n",
+    "print(theoretical)"
    ]
   },
   {
@@ -374,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +470,7 @@
     "    with ExitStack() as stack:\n",
     "        for plate in iter_plates_to_shape(polling_allocation.shape[:-1]):\n",
     "            stack.enter_context(plate)\n",
-    "        theta = pyro.sample(\"theta\", dist.MultivariateNormal(prior_mean, scale_tril=prior_scale_tril))\n",
+    "        theta = pyro.sample(\"theta\", dist.MultivariateNormal(prior_mean, covariance_matrix=prior_covariance))\n",
     "        poll_results = pyro.sample(\"y\", dist.Binomial(polling_allocation, logits=theta).to_event(1))\n",
     "        dem_win_state = (theta > 0.).float()\n",
     "        dem_electoral_college_votes = ec_votes_tensor * dem_win_state\n",
@@ -406,14 +488,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prior probability of Dem win 0.6625999808311462\n"
+      "Prior probability of Dem win 0.6663500070571899\n"
      ]
     }
    ],
@@ -421,6 +503,78 @@
     "_, dem_wins, theta = model(torch.ones(100000, 51))\n",
     "prior_w_prob = dem_wins.float().mean()\n",
     "print(\"Prior probability of Dem win\", prior_w_prob.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Max theta  Min theta\n",
+      "State                      \n",
+      "AL      0.000278   0.000390\n",
+      "AK      0.000316  -0.000227\n",
+      "AZ      0.000831  -0.000432\n",
+      "AR      0.000622   0.000510\n",
+      "CA     -0.000192   0.000509\n",
+      "CO     -0.000228   0.000330\n",
+      "CT      0.000003   0.000065\n",
+      "DE      0.000019  -0.000022\n",
+      "DC      0.000015  -0.001849\n",
+      "FL      0.000051   0.000061\n",
+      "GA     -0.000301   0.001000\n",
+      "HI      0.000110  -0.000495\n",
+      "ID      0.001037  -0.000211\n",
+      "IL      0.000086   0.000188\n",
+      "IN      0.000547  -0.000157\n",
+      "IA     -0.000201   0.000051\n",
+      "KS      0.000692  -0.000111\n",
+      "KY      0.000158   0.000324\n",
+      "LA      0.001111  -0.000030\n",
+      "ME      0.000044   0.000053\n",
+      "MD     -0.000120  -0.000010\n",
+      "MA      0.000189  -0.000271\n",
+      "MI     -0.000143   0.000604\n",
+      "MN      0.000250   0.000077\n",
+      "MS      0.000151   0.000234\n",
+      "MO      0.000255   0.000167\n",
+      "MT      0.000223   0.000159\n",
+      "NE      0.000455  -0.000365\n",
+      "NV     -0.000218   0.000349\n",
+      "NH     -0.000038   0.000090\n",
+      "NJ     -0.000209  -0.000019\n",
+      "NM     -0.000236   0.000528\n",
+      "NY      0.000142  -0.000294\n",
+      "NC     -0.000184   0.000537\n",
+      "ND      0.000306   0.000023\n",
+      "OH      0.000195   0.000015\n",
+      "OK      0.001103  -0.000167\n",
+      "OR     -0.000089   0.000284\n",
+      "PA      0.000212   0.000050\n",
+      "RI      0.000095  -0.000190\n",
+      "SC     -0.000364   0.000746\n",
+      "SD      0.000429  -0.000102\n",
+      "TN      0.000363   0.000136\n",
+      "TX      0.000318   0.000081\n",
+      "UT      0.001495  -0.000237\n",
+      "VT     -0.000400   0.000485\n",
+      "VA     -0.000150   0.000051\n",
+      "WA     -0.000168   0.000352\n",
+      "WV      0.000695   0.000323\n",
+      "WI      0.000040  -0.000038\n",
+      "WY      0.001476  -0.000248\n"
+     ]
+    }
+   ],
+   "source": [
+    "empirical = pd.DataFrame({\"State\": frame.index,\n",
+    "                          \"Max theta\": torch.sigmoid(theta.mean(0) + 2*theta.std(0)),\n",
+    "                          \"Min theta\": torch.sigmoid(theta.mean(0) - 2*theta.std(0))}).set_index('State')\n",
+    "print(empirical - theoretical)"
    ]
   },
   {
@@ -432,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -441,57 +595,57 @@
      "text": [
       "       Democrat win probability\n",
       "State                          \n",
-      "FL                      0.52522\n",
-      "NC                      0.43683\n",
-      "NH                      0.60733\n",
-      "VA                      0.61833\n",
-      "OH                      0.61965\n",
-      "NV                      0.63383\n",
-      "CO                      0.65049\n",
-      "GA                      0.33434\n",
-      "AZ                      0.31515\n",
+      "FL                      0.52265\n",
+      "NC                      0.43522\n",
+      "NH                      0.60511\n",
+      "OH                      0.61653\n",
+      "VA                      0.61832\n",
+      "NV                      0.63012\n",
+      "CO                      0.65030\n",
+      "GA                      0.33363\n",
+      "AZ                      0.31213\n",
       "IA                      0.72432\n",
-      "PA                      0.72606\n",
-      "AK                      0.26909\n",
-      "SC                      0.26636\n",
-      "MS                      0.22903\n",
-      "IN                      0.22865\n",
-      "MN                      0.77255\n",
-      "WI                      0.77484\n",
-      "MI                      0.77589\n",
-      "NM                      0.79073\n",
-      "MO                      0.19223\n",
-      "NE                      0.16571\n",
-      "MT                      0.16114\n",
-      "ME                      0.84038\n",
-      "CT                      0.84729\n",
-      "TX                      0.14983\n",
-      "ND                      0.14646\n",
-      "OR                      0.85830\n",
-      "IL                      0.86067\n",
-      "MA                      0.86847\n",
-      "WA                      0.86871\n",
-      "NJ                      0.86944\n",
-      "LA                      0.12142\n",
-      "ID                      0.12050\n",
-      "DE                      0.88066\n",
-      "SD                      0.11556\n",
-      "AL                      0.11411\n",
-      "AR                      0.11203\n",
-      "KS                      0.10633\n",
-      "RI                      0.90113\n",
-      "DC                      0.91329\n",
-      "CA                      0.91376\n",
-      "OK                      0.07557\n",
-      "TN                      0.07519\n",
-      "NY                      0.92518\n",
-      "WY                      0.06693\n",
-      "KY                      0.06625\n",
-      "UT                      0.06513\n",
-      "VT                      0.94265\n",
-      "MD                      0.95527\n",
-      "WV                      0.04230\n",
-      "HI                      0.95960\n"
+      "PA                      0.72542\n",
+      "AK                      0.26508\n",
+      "SC                      0.26409\n",
+      "MN                      0.76794\n",
+      "MS                      0.22695\n",
+      "WI                      0.77523\n",
+      "IN                      0.22463\n",
+      "MI                      0.77607\n",
+      "NM                      0.78910\n",
+      "MO                      0.18584\n",
+      "NE                      0.16550\n",
+      "ME                      0.84172\n",
+      "MT                      0.15815\n",
+      "CT                      0.84677\n",
+      "TX                      0.14841\n",
+      "OR                      0.85626\n",
+      "ND                      0.14317\n",
+      "IL                      0.85839\n",
+      "WA                      0.86700\n",
+      "MA                      0.86835\n",
+      "NJ                      0.86842\n",
+      "LA                      0.12153\n",
+      "DE                      0.87969\n",
+      "ID                      0.11977\n",
+      "SD                      0.11339\n",
+      "AL                      0.11109\n",
+      "AR                      0.10897\n",
+      "KS                      0.10495\n",
+      "RI                      0.90150\n",
+      "CA                      0.91279\n",
+      "DC                      0.91389\n",
+      "NY                      0.92489\n",
+      "OK                      0.07423\n",
+      "TN                      0.07221\n",
+      "WY                      0.06663\n",
+      "KY                      0.06623\n",
+      "UT                      0.06344\n",
+      "VT                      0.94155\n",
+      "MD                      0.95646\n",
+      "WV                      0.04095\n",
+      "HI                      0.95931\n"
      ]
     }
    ],
@@ -699,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,20 +902,20 @@
     "\n",
     "pyro.clear_param_store()\n",
     "guide = OutcomePredictor()\n",
-    "ape_florida = posterior_eig(model, poll_in_florida, \"y\", \"w\", 10, 4000, guide, \n",
+    "ape_florida = posterior_eig(model, poll_in_florida, \"y\", \"w\", 10, 10000, guide, \n",
     "                            Adam({\"lr\": 0.001}), eig=False, final_num_samples=10000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FL EIG 0.06539082527160645\n"
+      "FL EIG 0.057567715644836426\n"
      ]
     }
    ],
@@ -776,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,25 +940,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
     "pyro.clear_param_store()\n",
-    "ape_hawaii = posterior_eig(model, poll_in_hawaii, \"y\", \"w\", 10, 4000, guide, \n",
+    "ape_hawaii = posterior_eig(model, poll_in_hawaii, \"y\", \"w\", 10, 10000, guide, \n",
     "                           Adam({\"lr\": 0.001}), eig=False, final_num_samples=10000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HI EIG 0.038231611251831055\n"
+      "HI EIG 0.039142906665802\n"
      ]
     }
    ],
@@ -814,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -838,27 +992,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
     "uniform_poll = 19 * torch.ones(51)\n",
     "\n",
     "pyro.clear_param_store()\n",
-    "ape_martin = posterior_eig(model, uniform_poll, \"y\", \"w\", 10, 4000, guide, \n",
+    "ape_martin = posterior_eig(model, uniform_poll, \"y\", \"w\", 10, 10000, guide, \n",
     "                           Adam({\"lr\": 0.001}), eig=False, final_num_samples=10000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Uniform EIG 0.3164719343185425\n"
+      "Uniform EIG 0.291166752576828\n"
      ]
     }
    ],
@@ -880,6 +1034,69 @@
     "## Running the experiment\n",
     "To run the experiment, we sample a polling outcome using the probabilities implied by the actual results from the 2016 election.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([-0.5916, -0.3386, -0.0756, -0.5878,  0.6690,  0.1074,  0.2876,  0.2411,\n",
+      "         3.1014, -0.0248, -0.1065,  0.7282, -0.7681,  0.3648, -0.4104, -0.2032,\n",
+      "        -0.4520, -0.6487, -0.4126,  0.0639,  0.5761,  0.6037, -0.0047,  0.0333,\n",
+      "        -0.3677, -0.3979, -0.4519, -0.5558,  0.0518,  0.0079,  0.2935,  0.1866,\n",
+      "         0.4799, -0.0762, -0.8382, -0.1711, -0.8144,  0.2475, -0.0150,  0.3355,\n",
+      "        -0.3007, -0.6620, -0.5591, -0.1891, -0.5059,  0.6272,  0.1132,  0.3552,\n",
+      "        -0.9525, -0.0163, -1.1366])\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_data = pd.read_pickle(\"us_presidential_election_data_test.pickle\")\n",
+    "results_2016 = torch.tensor(test_data.values, dtype=torch.float)\n",
+    "true_theta = torch.log(results_2016[..., 0] / results_2016[..., 1])\n",
+    "print(true_theta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conditioned_model = pyro.condition(model, data={\"theta\": true_theta})\n",
+    "y, _, _ = conditioned_model(uniform_poll.expand(500, 51))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.2640)"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(guide.compute_dem_probability(y) < 0.).float().mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
