add grad investigations to notebook

--- a/tutorial/source/elections.ipynb
+++ b/tutorial/source/elections.ipynb
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1093,68 +1093,68 @@
      "text": [
       "       Logit grad\n",
       "State            \n",
-      "AL       0.023785\n",
-      "AK       0.038992\n",
-      "AZ       0.068724\n",
-      "AR       0.072842\n",
-      "CA       0.094376\n",
-      "CO       0.082956\n",
-      "CT       0.091433\n",
-      "DE       0.122040\n",
-      "DC      -0.146900\n",
-      "FL       0.142856\n",
-      "GA       0.082021\n",
-      "HI       0.085431\n",
-      "ID       0.050495\n",
-      "IL       0.078119\n",
-      "IN       0.060262\n",
-      "IA       0.018630\n",
-      "KS       0.038479\n",
-      "KY       0.009849\n",
-      "LA       0.028290\n",
-      "ME       0.102746\n",
-      "MD       0.060905\n",
-      "MA       0.074507\n",
-      "MI       0.063029\n",
-      "MN       0.028000\n",
-      "MS       0.018707\n",
-      "MO       0.031959\n",
-      "MT       0.035080\n",
-      "NE       0.047318\n",
-      "NV       0.149910\n",
       "NH       0.163455\n",
-      "NJ       0.100571\n",
-      "NM       0.093218\n",
-      "NY       0.064132\n",
-      "NC       0.077044\n",
-      "ND       0.069025\n",
-      "OH       0.089014\n",
-      "OK       0.046468\n",
-      "OR       0.041256\n",
-      "PA       0.063324\n",
-      "RI       0.058838\n",
-      "SC       0.066554\n",
-      "SD       0.038139\n",
-      "TN       0.018970\n",
-      "TX       0.051673\n",
-      "UT       0.063991\n",
-      "VT       0.105317\n",
+      "NV       0.149910\n",
+      "FL       0.142856\n",
+      "DE       0.122040\n",
       "VA       0.120077\n",
+      "VT       0.105317\n",
+      "ME       0.102746\n",
+      "NJ       0.100571\n",
+      "CA       0.094376\n",
+      "NM       0.093218\n",
+      "CT       0.091433\n",
+      "OH       0.089014\n",
+      "HI       0.085431\n",
+      "CO       0.082956\n",
+      "GA       0.082021\n",
+      "IL       0.078119\n",
+      "NC       0.077044\n",
+      "MA       0.074507\n",
+      "AR       0.072842\n",
+      "ND       0.069025\n",
+      "AZ       0.068724\n",
+      "SC       0.066554\n",
+      "NY       0.064132\n",
+      "UT       0.063991\n",
+      "PA       0.063324\n",
+      "MI       0.063029\n",
+      "MD       0.060905\n",
+      "IN       0.060262\n",
+      "RI       0.058838\n",
+      "TX       0.051673\n",
       "WA       0.051245\n",
-      "WV      -0.010732\n",
+      "ID       0.050495\n",
+      "NE       0.047318\n",
+      "OK       0.046468\n",
       "WI       0.042306\n",
-      "WY       0.041388\n"
+      "WY       0.041388\n",
+      "OR       0.041256\n",
+      "AK       0.038992\n",
+      "KS       0.038479\n",
+      "SD       0.038139\n",
+      "MT       0.035080\n",
+      "MO       0.031959\n",
+      "LA       0.028290\n",
+      "MN       0.028000\n",
+      "AL       0.023785\n",
+      "TN       0.018970\n",
+      "MS       0.018707\n",
+      "IA       0.018630\n",
+      "KY       0.009849\n",
+      "WV      -0.010732\n",
+      "DC      -0.146900\n"
      ]
     }
    ],
    "source": [
     "middle.requires_grad = True\n",
-    "if middle.grad:\n",
+    "if middle.grad is not None:\n",
     "    middle.grad.zero_()\n",
     "f_middle = guide.compute_dem_probability(middle)\n",
     "f_middle.backward()\n",
     "middle_grad = pd.DataFrame({\"State\": frame.index, \"Logit grad\": middle.grad}).set_index(\"State\")\n",
-    "print(middle_grad)"
+    "print(middle_grad.sort_values(\"Logit grad\", ascending=False))"
    ]
   },
   {
@@ -1166,23 +1166,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "No module named 'pyro.contrib.oed.differentiable_eig'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-33-26902bd62f05>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpyro\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontrib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdifferentiable_eig\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0m_differentiable_posterior_loss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m: No module named 'pyro.contrib.oed.differentiable_eig'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Design grad\n",
+      "State             \n",
+      "DC        0.101481\n",
+      "WV        0.000266\n",
+      "MO       -0.000403\n",
+      "KS       -0.000567\n",
+      "MN       -0.000580\n",
+      "KY       -0.000637\n",
+      "IA       -0.000734\n",
+      "ID       -0.000783\n",
+      "LA       -0.000806\n",
+      "WI       -0.000853\n",
+      "WY       -0.000887\n",
+      "SD       -0.000897\n",
+      "MS       -0.001032\n",
+      "OR       -0.001066\n",
+      "AL       -0.001177\n",
+      "GA       -0.001239\n",
+      "NE       -0.001379\n",
+      "TN       -0.001385\n",
+      "ND       -0.001541\n",
+      "UT       -0.001707\n",
+      "OK       -0.001800\n",
+      "MT       -0.001834\n",
+      "PA       -0.002016\n",
+      "TX       -0.002052\n",
+      "AK       -0.002209\n",
+      "IN       -0.002295\n",
+      "VT       -0.002460\n",
+      "AR       -0.002536\n",
+      "NY       -0.002726\n",
+      "MD       -0.002728\n",
+      "AZ       -0.002953\n",
+      "CO       -0.003007\n",
+      "OH       -0.003182\n",
+      "SC       -0.003187\n",
+      "NC       -0.003210\n",
+      "MI       -0.003249\n",
+      "IL       -0.003255\n",
+      "HI       -0.003316\n",
+      "CT       -0.003382\n",
+      "WA       -0.003509\n",
+      "RI       -0.003951\n",
+      "NJ       -0.004089\n",
+      "ME       -0.004613\n",
+      "MA       -0.004830\n",
+      "NM       -0.005017\n",
+      "VA       -0.005477\n",
+      "CA       -0.005489\n",
+      "FL       -0.006294\n",
+      "DE       -0.006422\n",
+      "NV       -0.007126\n",
+      "NH       -0.007399\n"
      ]
     }
    ],
    "source": [
-    "from pyro.contrib.oed.differentiable_eig import _differentiable_posterior_loss"
+    "from pyro.contrib.oed.differentiable_eig import _differentiable_posterior_loss\n",
+    "\n",
+    "loss = _differentiable_posterior_loss(model, guide, \"y\", \"w\")\n",
+    "uniform_poll.requires_grad = True\n",
+    "if uniform_poll.grad is not None:\n",
+    "    uniform_poll.grad.zero_()\n",
+    "f, ape = loss(uniform_poll, 100000, control_variate=1.)\n",
+    "f.backward()\n",
+    "design_grad = pd.DataFrame({\"State\": frame.index,\n",
+    "                            \"Design grad\": uniform_poll.grad}).set_index(\"State\")\n",
+    "print(design_grad.sort_values(\"Design grad\", ascending=False))"
    ]
   },
   {
